--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -32,7 +32,8 @@ library
       src/day1
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      MissingH
+    , base >=4.7 && <5
   default-language: Haskell2010
 
 executable aoc22-haskell-exe
@@ -43,7 +44,8 @@ executable aoc22-haskell-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aoc22-haskell
+      MissingH
+    , aoc22-haskell
     , base >=4.7 && <5
   default-language: Haskell2010
 
@@ -56,6 +58,7 @@ test-suite aoc22-haskell-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aoc22-haskell
+      MissingH
+    , aoc22-haskell
     , base >=4.7 && <5
   default-language: Haskell2010
