--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -26,10 +26,12 @@ source-repository head
 library
   exposed-modules:
       Day1
+      Day2
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
       src/day1
+      src/day2
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
