--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -27,15 +27,19 @@ library
   exposed-modules:
       Day1
       Day2
+      Day3
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
       src/day1
       src/day2
+      src/day3
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
     , base >=4.7 && <5
+    , ghc
+    , unordered-containers
   default-language: Haskell2010
 
 executable aoc22-haskell-exe
@@ -49,6 +53,8 @@ executable aoc22-haskell-exe
       MissingH
     , aoc22-haskell
     , base >=4.7 && <5
+    , ghc
+    , unordered-containers
   default-language: Haskell2010
 
 test-suite aoc22-haskell-test
@@ -63,4 +69,6 @@ test-suite aoc22-haskell-test
       MissingH
     , aoc22-haskell
     , base >=4.7 && <5
+    , ghc
+    , unordered-containers
   default-language: Haskell2010
