--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,8 @@ description: Please see the README on GitHub at <https://github.com/githubuser/a
 dependencies:
   - base >= 4.7 && < 5
   - MissingH
+  - unordered-containers
+  - ghc
 
 ghc-options:
   - -Wall
@@ -38,6 +40,7 @@ library:
   source-dirs:
     - src/day1
     - src/day2
+    - src/day3
 
 executables:
   aoc22-haskell-exe:
