--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -28,16 +28,19 @@ library
       Day1
       Day2
       Day3
+      Day4
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
       src/day1
       src/day2
       src/day3
+      src/day4
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
     , base >=4.7 && <5
+    , criterion
     , ghc
     , unordered-containers
   default-language: Haskell2010
@@ -53,6 +56,7 @@ executable aoc22-haskell-exe
       MissingH
     , aoc22-haskell
     , base >=4.7 && <5
+    , criterion
     , ghc
     , unordered-containers
   default-language: Haskell2010
@@ -69,6 +73,7 @@ test-suite aoc22-haskell-test
       MissingH
     , aoc22-haskell
     , base >=4.7 && <5
+    , criterion
     , ghc
     , unordered-containers
   default-language: Haskell2010
