--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -25,12 +25,14 @@ source-repository head
 
 library
   exposed-modules:
+      Solution
       StringUtils
       Day1
       Day2
       Day3
       Day4
       Day5
+      Day6
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -40,6 +42,7 @@ library
       src/day3
       src/day4
       src/day5
+      src/day6
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
