--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -33,6 +33,7 @@ library
       Day4
       Day5
       Day6
+      Day7
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -43,6 +44,7 @@ library
       src/day4
       src/day5
       src/day6
+      src/day7
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
