--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -52,6 +52,7 @@ library
     , containers
     , extra
     , ghc
+    , mtl
     , regex-pcre
     , unordered-containers
   default-language: Haskell2010
@@ -70,6 +71,7 @@ executable aoc22-haskell-exe
     , containers
     , extra
     , ghc
+    , mtl
     , regex-pcre
     , unordered-containers
   default-language: Haskell2010
@@ -89,6 +91,7 @@ test-suite aoc22-haskell-test
     , containers
     , extra
     , ghc
+    , mtl
     , regex-pcre
     , unordered-containers
   default-language: Haskell2010
