--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -34,6 +34,7 @@ library
       Day5
       Day6
       Day7
+      Day8
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -45,6 +46,7 @@ library
       src/day5
       src/day6
       src/day7
+      src/day8
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
