--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -36,6 +36,7 @@ library
       Day7
       Day8
       Day9
+      Day10
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -49,6 +50,7 @@ library
       src/day7
       src/day8
       src/day9
+      src/day10
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
