--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -37,6 +37,7 @@ library
       Day8
       Day9
       Day10
+      Day11
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -51,6 +52,7 @@ library
       src/day8
       src/day9
       src/day10
+      src/day11
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
