--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -38,6 +38,7 @@ library
       Day9
       Day10
       Day11
+      Day12
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -53,6 +54,7 @@ library
       src/day9
       src/day10
       src/day11
+      src/day12
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
@@ -61,6 +63,7 @@ library
     , extra
     , ghc
     , mtl
+    , pqueue
     , regex-pcre
     , unordered-containers
   default-language: Haskell2010
@@ -80,6 +83,7 @@ executable aoc22-haskell-exe
     , extra
     , ghc
     , mtl
+    , pqueue
     , regex-pcre
     , unordered-containers
   default-language: Haskell2010
@@ -100,6 +104,7 @@ test-suite aoc22-haskell-test
     , extra
     , ghc
     , mtl
+    , pqueue
     , regex-pcre
     , unordered-containers
   default-language: Haskell2010
