--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -28,6 +28,7 @@ library
       Graphs
       Solution
       StringUtils
+      Utils
       Day1
       Day2
       Day3
@@ -40,6 +41,7 @@ library
       Day10
       Day11
       Day12
+      Day13
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -56,6 +58,7 @@ library
       src/day10
       src/day11
       src/day12
+      src/day13
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
