--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -42,6 +42,7 @@ library
       Day11
       Day12
       Day13
+      Day14
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -59,6 +60,7 @@ library
       src/day11
       src/day12
       src/day13
+      src/day14
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
