--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -43,6 +43,7 @@ library
       Day12
       Day13
       Day14
+      Day15
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -61,6 +62,7 @@ library
       src/day12
       src/day13
       src/day14
+      src/day15
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
