--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -44,6 +44,7 @@ library
       Day13
       Day14
       Day15
+      Day16
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -63,6 +64,7 @@ library
       src/day13
       src/day14
       src/day15
+      src/day16
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
