--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -45,7 +45,10 @@ library
       Day13
       Day14
       Day15
+      Day15alt
       Day16
+      Day16alt
+      Day17
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -66,6 +69,7 @@ library
       src/day14
       src/day15
       src/day16
+      src/day17
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
@@ -75,6 +79,7 @@ library
     , ghc
     , hashable
     , mtl
+    , parsec
     , regex-pcre
     , unordered-containers
   default-language: Haskell2010
@@ -95,6 +100,7 @@ executable aoc22-haskell-exe
     , ghc
     , hashable
     , mtl
+    , parsec
     , regex-pcre
     , unordered-containers
   default-language: Haskell2010
@@ -116,6 +122,7 @@ test-suite aoc22-haskell-test
     , ghc
     , hashable
     , mtl
+    , parsec
     , regex-pcre
     , unordered-containers
   default-language: Haskell2010
