--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -48,6 +48,7 @@ library
       Day15alt
       Day16
       Day17
+      Day18
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -69,6 +70,7 @@ library
       src/day15
       src/day16
       src/day17
+      src/day18
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
