--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -53,6 +53,7 @@ library
       Day19
       Day19Alt
       Day20
+      Day21
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -77,6 +78,7 @@ library
       src/day18
       src/day19
       src/day20
+      src/day21
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
