--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -54,6 +54,7 @@ library
       Day19Alt
       Day20
       Day21
+      Day22
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -79,6 +80,7 @@ library
       src/day19
       src/day20
       src/day21
+      src/day22
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
