--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -55,6 +55,7 @@ library
       Day20
       Day21
       Day22
+      Day23
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -81,6 +82,7 @@ library
       src/day20
       src/day21
       src/day22
+      src/day23
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
