--- a/aoc22-haskell.cabal
+++ b/aoc22-haskell.cabal
@@ -57,6 +57,7 @@ library
       Day22
       Day23
       Day24
+      Day25
   other-modules:
       Paths_aoc22_haskell
   hs-source-dirs:
@@ -85,6 +86,7 @@ library
       src/day22
       src/day23
       src/day24
+      src/day25
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       MissingH
